--- a/client/package.json
+++ b/client/package.json
@@ -1,11 +1,6 @@
 {
-    "name": "goto-typescript",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "homepage": "https://alexchomiak.github.io/goto-react-app-2.0/",
+    "name": "final-project-dream-team-1",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
         "start": "webpack-dashboard -m -t 'GoTo React App' -- webpack-dev-server src --inline --config ./config/webpack.development.config.js --open",
         "refresh": "node ./scripts/refresh.js",
         "build": "webpack --config ./config/webpack.production.config.js",
@@ -24,7 +19,7 @@
         "@types/react-dom": "^16.9.5",
         "@types/react-redux": "^7.1.7",
         "@types/react-router-dom": "^5.1.3",
-        "@types/react-transition-group": "^4.2.3",
+        "@types/react-transition-group": "^4.2.4",
         "@types/redux-thunk": "^2.1.0",
         "babel-loader": "^8.0.6",
         "next": "^9.2.2",
@@ -37,17 +32,17 @@
         "redux-thunk": "^2.3.0"
     },
     "devDependencies": {
-        "@types/react": "^16.9.20",
+        "@types/react": "^16.9.22",
         "copy-webpack-plugin": "^5.1.1",
         "css-loader": "^3.4.2",
-        "file-loader": "^5.0.2",
+        "file-loader": "^5.1.0",
         "image-webpack-loader": "^6.0.0",
         "node-sass": "^4.13.1",
-        "sass-loader": "^7.1.0",
+        "sass-loader": "^8.0.2",
         "style-loader": "^1.1.3",
-        "tslint": "^5.20.1",
+        "tslint": "^6.0.0",
         "tslint-immutable": "^6.0.1",
-        "typescript": "^3.7.5",
+        "typescript": "^3.8.2",
         "webpack": "^4.41.6",
         "webpack-cli": "^3.3.11",
         "webpack-dashboard": "^3.2.0",
