--- a/api/package.json
+++ b/api/package.json
@@ -21,6 +21,7 @@
         "body-parser": "^1.19.0",
         "compression": "^1.7.4",
         "connect-redis": "^4.0.4",
+        "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "errorhandler": "^1.5.1",
         "express": "^4.17.1",
