--- a/client/package.json
+++ b/client/package.json
@@ -22,8 +22,10 @@
         "@types/react-transition-group": "^4.2.4",
         "@types/redux-thunk": "^2.1.0",
         "babel-loader": "^8.0.6",
+        "bootstrap": "^4.4.1",
         "next": "^9.2.2",
         "react": "^16.12.0",
+        "react-bootstrap": "^1.0.0-beta.16",
         "react-dom": "^16.12.0",
         "react-redux": "^7.2.0",
         "react-router-dom": "^5.1.2",
