--- a/api/package.json
+++ b/api/package.json
@@ -31,6 +31,7 @@
         "lodash": "^4.17.15",
         "lusca": "^1.6.1",
         "mongoose": "^5.9.2",
+        "morgan": "^1.9.1",
         "nodemailer": "^6.4.3",
         "passport": "^0.4.1",
         "passport-local": "^1.0.0",
@@ -56,6 +57,7 @@
         "@types/lodash": "^4.14.149",
         "@types/lusca": "^1.6.1",
         "@types/mongoose": "^5.7.1",
+        "@types/morgan": "^1.9.0",
         "@types/node": "^13.7.4",
         "@types/nodemailer": "^6.4.0",
         "@types/passport": "^1.0.2",
