--- a/client/package.json
+++ b/client/package.json
@@ -16,11 +16,12 @@
         "@babel/preset-env": "^7.8.6",
         "@babel/preset-react": "^7.8.3",
         "@babel/preset-typescript": "^7.8.3",
+        "@material-ui/core": "^4.9.5",
+        "@material-ui/icons": "^4.9.1",
         "@types/react-dom": "^16.9.5",
         "@types/react-redux": "^7.1.7",
         "@types/react-router-dom": "^5.1.3",
         "@types/react-transition-group": "^4.2.4",
-        "@types/redux-thunk": "^2.1.0",
         "babel-loader": "^8.0.6",
         "bootstrap": "^4.4.1",
         "next": "^9.2.2",
