--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
         "@babel/preset-env": "^7.8.6",
         "@babel/preset-react": "^7.8.3",
         "@babel/preset-typescript": "^7.8.3",
+        "@date-io/date-fns": "^1.3.13",
         "@material-ui/core": "^4.9.5",
         "@material-ui/icons": "^4.9.1",
         "@types/react-dom": "^16.9.5",
@@ -24,6 +25,10 @@
         "@types/react-transition-group": "^4.2.4",
         "babel-loader": "^8.0.6",
         "bootstrap": "^4.4.1",
+        "date-fns": "^2.10.0",
+        "formik": "^2.1.4",
+        "formik-material-ui": "^2.0.0-beta.1",
+        "formik-material-ui-pickers": "0.0.8",
         "next": "^9.2.2",
         "react": "^16.13.0",
         "react-bootstrap": "^1.0.0-beta.17",
