--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
     "name": "final-project-dream-team-1",
     "scripts": {
-        "start": "webpack-dashboard -m -t 'GoTo React App' -- webpack-dev-server src --inline --config ./config/webpack.development.config.js --open",
+        "start": "webpack-dev-server src --inline --config ./config/webpack.development.config.js --open",
         "refresh": "node ./scripts/refresh.js",
         "build": "webpack --config ./config/webpack.production.config.js",
         "buildlib": "webpack --config ./config/webpack.library.config.js"
@@ -10,10 +10,10 @@
     "license": "ISC",
     "dependencies": {
         "@babel/cli": "^7.8.4",
-        "@babel/core": "^7.8.4",
+        "@babel/core": "^7.8.6",
         "@babel/plugin-proposal-class-properties": "^7.8.3",
         "@babel/polyfill": "^7.8.3",
-        "@babel/preset-env": "^7.8.4",
+        "@babel/preset-env": "^7.8.6",
         "@babel/preset-react": "^7.8.3",
         "@babel/preset-typescript": "^7.8.3",
         "@types/react-dom": "^16.9.5",
@@ -24,9 +24,9 @@
         "babel-loader": "^8.0.6",
         "bootstrap": "^4.4.1",
         "next": "^9.2.2",
-        "react": "^16.12.0",
-        "react-bootstrap": "^1.0.0-beta.16",
-        "react-dom": "^16.12.0",
+        "react": "^16.13.0",
+        "react-bootstrap": "^1.0.0-beta.17",
+        "react-dom": "^16.13.0",
         "react-redux": "^7.2.0",
         "react-router-dom": "^5.1.2",
         "react-transition-group": "^4.3.0",
@@ -34,7 +34,7 @@
         "redux-thunk": "^2.3.0"
     },
     "devDependencies": {
-        "@types/react": "^16.9.22",
+        "@types/react": "^16.9.23",
         "copy-webpack-plugin": "^5.1.1",
         "css-loader": "^3.4.2",
         "file-loader": "^5.1.0",
@@ -44,10 +44,9 @@
         "style-loader": "^1.1.3",
         "tslint": "^6.0.0",
         "tslint-immutable": "^6.0.1",
-        "typescript": "^3.8.2",
-        "webpack": "^4.41.6",
+        "typescript": "^3.8.3",
+        "webpack": "^4.42.0",
         "webpack-cli": "^3.3.11",
-        "webpack-dashboard": "^3.2.0",
         "webpack-dev-server": "^3.10.3"
     }
 }
