--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
         "@types/react-redux": "^7.1.7",
         "@types/react-router-dom": "^5.1.3",
         "@types/react-transition-group": "^4.2.4",
+        "axios": "^0.19.2",
         "babel-loader": "^8.0.6",
         "bootstrap": "^4.4.1",
         "date-fns": "^2.10.0",
