--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
         "react": "^16.13.0",
         "react-bootstrap": "^1.0.0-beta.17",
         "react-dom": "^16.13.0",
+        "react-hanger": "^2.1.3",
         "react-redux": "^7.2.0",
         "react-router-dom": "^5.1.2",
         "react-transition-group": "^4.3.0",
