--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,11 @@
         "@babel/preset-react": "^7.8.3",
         "@babel/preset-typescript": "^7.8.3",
         "@date-io/date-fns": "^1.3.13",
+        "@fortawesome/fontawesome-svg-core": "^1.2.27",
+        "@fortawesome/free-brands-svg-icons": "^5.12.1",
+        "@fortawesome/free-regular-svg-icons": "^5.12.1",
+        "@fortawesome/free-solid-svg-icons": "^5.12.1",
+        "@fortawesome/react-fontawesome": "^0.1.8",
         "@material-ui/core": "^4.9.5",
         "@material-ui/icons": "^4.9.1",
         "@testing-library/jest-dom": "^5.1.1",
