--- a/client/package.json
+++ b/client/package.json
@@ -39,12 +39,14 @@
         "date-fns": "^2.10.0",
         "next": "^9.2.2",
         "react": "^16.13.0",
+        "react-app-polyfill": "^1.0.6",
         "react-bootstrap": "^1.0.0-beta.17",
         "react-dom": "^16.13.0",
         "react-redux": "^7.2.0",
         "react-router-dom": "^5.1.2",
         "react-transition-group": "^4.3.0",
         "redux": "^4.0.5",
+        "redux-devtools-extension": "^2.13.8",
         "redux-thunk": "^2.3.0",
         "ts-jest": "^25.2.1"
     },
