💚 Added python3 to client docker fix build breaks

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -2,7 +2,7 @@ FROM node:12-alpine AS base
 WORKDIR /usr/src/app
 COPY package*.json ./
 
-RUN npm ci
+RUN apk add python3 && npm ci
 COPY . .
 RUN npm run build --if-present
 RUN npm run test --if-present
