--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
     "dependencies": {
         "@types/bcrypt": "^3.0.0",
         "async": "^3.2.0",
+        "axios": "^0.19.2",
         "bcrypt": "^4.0.1",
         "bcrypt-nodejs": "^0.0.3",
         "body-parser": "^1.19.0",
