--- a/api/package.json
+++ b/api/package.json
@@ -53,6 +53,7 @@
         "@types/compression": "^1.7.0",
         "@types/concurrently": "^5.1.0",
         "@types/connect-mongo": "^3.1.3",
+        "@types/cors": "^2.8.6",
         "@types/errorhandler": "^1.5.0",
         "@types/eslint": "^6.1.8",
         "@types/express": "^4.17.2",
