--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,12 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@date-io/date-fns": "^1.3.13",
+        "@fortawesome/fontawesome-svg-core": "^1.2.27",
+        "@fortawesome/free-brands-svg-icons": "^5.12.1",
+        "@fortawesome/free-regular-svg-icons": "^5.12.1",
+        "@fortawesome/free-solid-svg-icons": "^5.12.1",
+        "@fortawesome/react-fontawesome": "^0.1.8",
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.5.0",
         "@testing-library/user-event": "^7.2.1",
@@ -14,27 +20,22 @@
         "@types/react-router-dom": "^5.1.3",
         "@types/redux": "^3.6.0",
         "@types/redux-thunk": "^2.1.0",
-        "react": "^16.13.0",
-        "react-dom": "^16.13.0",
-        "react-redux": "^7.2.0",
-        "react-router-dom": "^5.1.2",
-        "react-scripts": "3.4.0",
-        "redux": "^4.0.5",
-        "redux-thunk": "^2.3.0",
-        "typescript": "^3.7.5",
-        "@date-io/date-fns": "^1.3.13",
-        "@fortawesome/fontawesome-svg-core": "^1.2.27",
-        "@fortawesome/free-brands-svg-icons": "^5.12.1",
-        "@fortawesome/free-regular-svg-icons": "^5.12.1",
-        "@fortawesome/free-solid-svg-icons": "^5.12.1",
-        "@fortawesome/react-fontawesome": "^0.1.8",
         "axios": "^0.19.2",
         "bootstrap": "^4.4.1",
         "date-fns": "^2.10.0",
         "next": "^9.2.2",
+        "react": "^16.13.0",
         "react-app-polyfill": "^1.0.6",
+        "react-bootstrap": "^1.0.0-beta.17",
+        "react-dom": "^16.13.0",
+        "react-redux": "^7.2.0",
+        "react-router-dom": "^5.1.2",
+        "react-scripts": "3.4.0",
+        "react-toastify": "^5.5.0",
+        "redux": "^4.0.5",
         "redux-devtools-extension": "^2.13.8",
-        "react-bootstrap": "^1.0.0-beta.17"
+        "redux-thunk": "^2.3.0",
+        "typescript": "^3.7.5"
     },
     "scripts": {
         "start": "react-scripts start",
