--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
         "start": "npm run serve",
         "build": "npm run build-ts && npm run lint",
         "serve": "node dist/server.js",
-        "watch-node": "nodemon dist/server.js",
+        "watch-node": "nodemon -L dist/server.js",
         "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\"",
         "test": "jest --forceExit --coverage --verbose",
         "build-ts": "tsc",
@@ -12,11 +12,10 @@
         "watch-test": "npm run test -- --watchAll",
         "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
         "debug": "npm run build && npm run watch-debug",
-        "serve-debug": "nodemon --inspect dist/server.js",
+        "serve-debug": "nodemon -L --inspect dist/server.js",
         "watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\""
     },
     "dependencies": {
-        "@types/bcrypt": "^3.0.0",
         "async": "^3.2.0",
         "axios": "^0.19.2",
         "axios-cookiejar-support": "^0.5.1",
@@ -49,6 +48,7 @@
     },
     "devDependencies": {
         "@types/async": "^3.0.8",
+        "@types/bcrypt": "^3.0.0",
         "@types/bcrypt-nodejs": "^0.0.31",
         "@types/body-parser": "^1.19.0",
         "@types/chai": "^4.2.10",
