--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
         "@testing-library/user-event": "^7.2.1",
         "@types/jest": "^24.9.1",
         "@types/node": "^12.12.29",
+        "@types/node-sass": "^4.11.0",
         "@types/react": "^16.9.23",
         "@types/react-dom": "^16.9.5",
         "@types/react-redux": "^7.1.7",
@@ -24,6 +25,7 @@
         "bootstrap": "^4.4.1",
         "date-fns": "^2.10.0",
         "next": "^9.2.2",
+        "node-sass": "^4.13.1",
         "react": "^16.13.0",
         "react-app-polyfill": "^1.0.6",
         "react-bootstrap": "^1.0.0-beta.17",
@@ -57,10 +59,5 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
-    },
-    "devDependencies": {
-        "@types/node-sass": "^4.11.0",
-        "node-sass": "^4.13.1"
-    },
-    "proxy": "http://localhost:4000/"
+    }
 }
