--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     build: "api"
     restart: always
     environment:
-      - MONGODB_URI=mongodb://mongo:27017/appdb
+      - MONGODB_URI=mongodb://mongo:27017/registrum
       - REDIS_URL=redis://redis
       - NODE_ENV=production
       - BASE_PATH=/api
@@ -18,33 +18,28 @@ services:
       - redis
   redis:
     image: redis:alpine
+    restart: always
     container_name: redis
+    volumes:
+      - redis-data:/data
+    command: --appendonly yes
   mongo:
     container_name: mongodb
     restart: always
     image: mongo:latest
     volumes:
       - mongo-data:/data/db
-  nginx:
-    container_name: nginx
-    restart: always
-    image: nginx:alpine
-    volumes: 
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - nginx-www:/usr/share/nginx/html
-    depends_on:
-      - client
-      - api
-    ports:
-      - 8080:80
   client:
     container_name: client
     build: "client"
+    restart: always
     environment:
       - NODE_ENV=production
-    volumes: 
-      - nginx-www:/usr/src/app/build
+    depends_on:
+      - api
+    ports:
+      - 8080:80
 
 volumes:
   mongo-data:
-  nginx-www:
+  redis-data:
