--- a/api/package.json
+++ b/api/package.json
@@ -85,5 +85,8 @@
         "ts-jest": "^25.2.1",
         "ts-node": "^8.7.0",
         "typescript": "^3.8.3"
+    },
+    "resolutions": {
+        "minimist": "^1.2.5"
     }
 }
