--- a/client/package.json
+++ b/client/package.json
@@ -1,8 +1,15 @@
 {
-    "name": "cra-client",
+    "name": "goto-typescript",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@babel/cli": "^7.8.4",
+        "@babel/core": "^7.9.0",
+        "@babel/plugin-proposal-class-properties": "^7.8.3",
+        "@babel/polyfill": "^7.8.7",
+        "@babel/preset-env": "^7.9.0",
+        "@babel/preset-react": "^7.9.0",
+        "@babel/preset-typescript": "^7.9.0",
         "@date-io/date-fns": "^2.4.0",
         "@fortawesome/fontawesome-svg-core": "^1.2.27",
         "@fortawesome/free-brands-svg-icons": "^5.12.1",
@@ -14,14 +21,16 @@
         "@testing-library/user-event": "^10.0.0",
         "@types/jest": "^25.1.4",
         "@types/node": "^13.9.2",
-        "@types/react": "^16.9.23",
         "@types/react-dom": "^16.9.5",
         "@types/react-redux": "^7.1.7",
         "@types/react-router-dom": "^5.1.3",
+        "@types/react-transition-group": "^4.2.4",
         "@types/redux": "^3.6.0",
         "@types/redux-thunk": "^2.1.0",
         "axios": "^0.19.2",
+        "babel-loader": "^8.1.0",
         "bootstrap": "^4.4.1",
+        "core-js": "^3.6.4",
         "date-fns": "^2.11.0",
         "next": "^9.3.1",
         "react": "^16.13.1",
@@ -30,37 +39,34 @@
         "react-dom": "^16.13.1",
         "react-redux": "^7.2.0",
         "react-router-dom": "^5.1.2",
-        "react-scripts": "3.4.0",
         "react-toastify": "^5.5.0",
+        "react-transition-group": "^4.3.0",
         "redux": "^4.0.5",
         "redux-devtools-extension": "^2.13.8",
-        "redux-thunk": "^2.3.0",
-        "typescript": "^3.8.3"
+        "redux-thunk": "^2.3.0"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test --passWithNoTests",
-        "eject": "react-scripts eject"
-    },
-    "eslintConfig": {
-        "extends": "react-app"
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "webpack-dev-server src --inline --config ./config/webpack.development.config.js --open",
+        "refresh": "node ./scripts/refresh.js",
+        "build": "webpack --config ./config/webpack.production.config.js",
+        "buildlib": "webpack --config ./config/webpack.library.config.js"
     },
     "devDependencies": {
         "@types/node-sass": "^4.11.0",
-        "node-sass": "^4.13.1"
-    },
-    "proxy": "http://localhost:4000/"
+        "@types/react": "^16.9.23",
+        "copy-webpack-plugin": "^5.1.1",
+        "css-loader": "^3.4.2",
+        "file-loader": "^6.0.0",
+        "image-webpack-loader": "^6.0.0",
+        "node-sass": "^4.13.1",
+        "sass-loader": "^8.0.2",
+        "style-loader": "^1.1.3",
+        "tslint": "^6.1.0",
+        "tslint-immutable": "^6.0.1",
+        "typescript": "^3.8.3",
+        "webpack": "^4.42.0",
+        "webpack-cli": "^3.3.11",
+        "webpack-dev-server": "^3.10.3"
+    }
 }
