--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,25 +1,3 @@
-{
-  "compilerOptions": {
-    "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react"
-  },
-  "include": [
-    "src"
-  ]
-}
+// * Automatically Generated tsconfig file
+// * Change settings in settings/tsconfig.js
+ {"compilerOptions":{"paths":{},"target":"esnext","outDir":"./public/","strictNullChecks":true,"moduleResolution":"node","allowJs":true,"noEmit":true,"strict":true,"esModuleInterop":true,"jsx":"react","baseUrl":"src","lib":["es2015","dom.iterable","es2016.array.include","es2017.object","dom"],"module":"es6","removeComments":true,"alwaysStrict":true,"allowUnreachableCode":false,"noImplicitAny":true,"noImplicitThis":true,"noUnusedLocals":true,"noUnusedParameters":true,"noImplicitReturns":true,"noFallthroughCasesInSwitch":true,"forceConsistentCasingInFileNames":true,"importHelpers":true}}
