--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,6 @@
         "@testing-library/jest-dom": "^5.1.1",
         "@testing-library/react": "^10.0.1",
         "@testing-library/user-event": "^10.0.0",
-        "@types/jest": "^25.1.4",
         "@types/node": "^13.9.2",
         "@types/react-dom": "^16.9.5",
         "@types/react-redux": "^7.1.7",
@@ -46,27 +45,58 @@
         "redux-thunk": "^2.3.0"
     },
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "jest",
         "start": "webpack-dev-server src --inline --config ./config/webpack.development.config.js --open",
         "refresh": "node ./scripts/refresh.js",
         "build": "webpack --config ./config/webpack.production.config.js",
         "buildlib": "webpack --config ./config/webpack.library.config.js"
     },
     "devDependencies": {
+        "@types/enzyme": "^3.10.5",
+        "@types/enzyme-adapter-react-16": "^1.0.6",
+        "@types/jest": "^25.1.4",
         "@types/node-sass": "^4.11.0",
         "@types/react": "^16.9.23",
         "copy-webpack-plugin": "^5.1.1",
         "css-loader": "^3.4.2",
+        "enzyme": "^3.11.0",
+        "enzyme-adapter-react-16": "^1.15.2",
         "file-loader": "^6.0.0",
+        "identity-obj-proxy": "^3.0.0",
         "image-webpack-loader": "^6.0.0",
+        "jest": "^25.1.0",
         "node-sass": "^4.13.1",
         "sass-loader": "^8.0.2",
         "style-loader": "^1.1.3",
+        "ts-jest": "^25.2.1",
         "tslint": "^6.1.0",
         "tslint-immutable": "^6.0.1",
         "typescript": "^3.8.3",
         "webpack": "^4.42.0",
         "webpack-cli": "^3.3.11",
         "webpack-dev-server": "^3.10.3"
+    },
+    "jest": {
+        "modulePaths": [
+            "<rootDir>"
+        ],
+        "setupFiles": [
+            "<rootDir>/src/test/test-setup.js"
+        ],
+        "moduleFileExtensions": [
+            "ts",
+            "tsx",
+            "js"
+        ],
+        "moduleNameMapper": {
+            "\\.(css|less)$": "identity-obj-proxy"
+        },
+        "transform": {
+            "^.+\\.(ts|tsx)$": "ts-jest",
+            "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/src/fileTransformer.js"
+        },
+        "testMatch": [
+            "<rootDir>/src/test/*.test.(ts|tsx|js)"
+        ]
     }
 }
