--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,5 +1,5 @@
 FROM node:12-buster AS base
-ENV PATH=$PATH:/home/node/app/node_modules/.bin
+ENV PATH=$PATH:/usr/src/app/node_modules/.bin
 WORKDIR /usr/src/app
 COPY package*.json ./
 
@@ -11,15 +11,15 @@ EXPOSE 4000
 CMD npm run watch
 
 FROM base as build
-ENV NODE_ENV=production
 RUN npm ci
 COPY . .
-RUN  npm run build --if-present
+RUN npm run build
 
 FROM node:12-alpine as prod
-COPY --from=build /usr/src/app/package*.json /usr/src/app/
+ENV NODE_ENV=production
+COPY --from=build /usr/src/app/package*.json ./
 RUN npm install --production
-COPY --from=build /usr/src/app/dist /usr/src/app/dist
+COPY --from=build /usr/src/app/dist ./
 ENV PORT=8080
 EXPOSE 8080
 CMD npm run start
