--- a/api/package.json
+++ b/api/package.json
@@ -1,5 +1,6 @@
 {
     "name": "final-project-dream-team-1",
+    "private": true,
     "scripts": {
         "start": "npm run serve",
         "build": "npm run build-ts && npm run lint",
@@ -7,7 +8,7 @@
         "watch-node": "nodemon dist/server.js",
         "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\"",
         "test": "jest --forceExit --coverage --verbose",
-        "build-ts": "tsc",
+        "build-ts": "node_modules/.bin/tsc",
         "watch-ts": "tsc -w",
         "watch-test": "npm run test -- --watchAll",
         "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
