--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,50 +1,57 @@
-version: "3"
+version: "3.7"
 
 services:
   api:
-    container_name: api
-    build: "api"
+    build:
+      context: api
+      target: prod
+    image: docker.pkg.github.com/ckanich-classrooms/final-project-dream-team-1/api:master
     restart: always
     environment:
-      - MONGODB_URI=mongodb://mongo:27017/appdb
+      - MONGODB_URI=mongodb://mongo:27017/registrum
       - REDIS_URL=redis://redis
       - NODE_ENV=production
       - BASE_PATH=/api
-    links:
-      - mongo
-      - redis
     depends_on:
       - mongo
       - redis
+    networks:
+      - kanich-net
   redis:
     image: redis:alpine
+    restart: always
     container_name: redis
+    volumes:
+      - redis-data:/data
+    command: --appendonly yes
+    networks: 
+      - kanich-net
   mongo:
     container_name: mongodb
     restart: always
     image: mongo:latest
     volumes:
       - mongo-data:/data/db
-  nginx:
-    container_name: nginx
+    networks: 
+      - kanich-net
+  client:
+    container_name: client
+    build:
+      context: client
+      target: prod
+    image: docker.pkg.github.com/ckanich-classrooms/final-project-dream-team-1/client:master
     restart: always
-    image: nginx:alpine
-    volumes: 
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - nginx-www:/usr/share/nginx/html
+    environment:
+      - NODE_ENV=production
     depends_on:
-      - client
       - api
     ports:
       - 8080:80
-  client:
-    container_name: client
-    build: "client"
-    environment:
-      - NODE_ENV=production
-    volumes: 
-      - nginx-www:/usr/src/app/build
+    networks: 
+      - kanich-net
 
+networks:
+  kanich-net:
 volumes:
   mongo-data:
-  nginx-www:
+  redis-data:
