adding dependency for pwa

--- a/client/package.json
+++ b/client/package.json
@@ -62,6 +62,7 @@
         "enzyme": "^3.11.0",
         "enzyme-adapter-react-16": "^1.15.2",
         "file-loader": "^6.0.0",
+        "http-server": "^0.12.1",
         "identity-obj-proxy": "^3.0.0",
         "image-webpack-loader": "^6.0.0",
         "jest": "^25.1.0",
