--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
         "react-transition-group": "^4.3.0",
         "redux": "^4.0.5",
         "redux-devtools-extension": "^2.13.8",
+        "redux-persist": "^6.0.0",
         "redux-thunk": "^2.3.0"
     },
     "scripts": {
