--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,7 @@
         "serve": "node dist/server.js",
         "watch-node": "nodemon dist/server.js",
         "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\"",
-        "test": "jest --forceExit --coverage --verbose",
+        "test": "jest --forceExit --coverage --verbose --runInBand",
         "build-ts": "node_modules/.bin/tsc",
         "watch-ts": "tsc -w",
         "watch-test": "npm run test -- --watchAll",
