--- a/api/.eslintrc
+++ b/api/.eslintrc
@@ -7,6 +7,7 @@
     },
     "rules": {
         "quotes": ["error", "double"],
+        "semi": "error",
         "@typescript-eslint/explicit-function-return-type": "off",
         "@typescript-eslint/no-explicit-any": 1,
         "@typescript-eslint/no-inferrable-types": [
