:whale: :pencil: patched docker configs and updated docker docs

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -24,9 +24,9 @@ jobs:
       - uses: actions/checkout@v2
       - name: Build the development Docker image
         run: |
-          docker-compose -f docker-compose.dev.yml build --pull --parallel
+          docker-compose build --pull --parallel
       - if: github.ref == 'refs/heads/master'
         name: Push the development Docker image
         run: |
           echo ${{ secrets.GITHUB_TOKEN }} | docker login docker.pkg.github.com --username ${{ github.actor }} --password-stdin
-          docker-compose -f docker-compose.dev.yml push
+          docker-compose push
