--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,17 +1,16 @@
 FROM node:12-buster AS base
-ENV PATH=$PATH:/usr/src/app/node_modules/.bin
+ENV PATH=$PATH:/usr/src/app/node_modules/.bin \
+    PORT=4000
+EXPOSE 4000
+
 WORKDIR /usr/src/app
 COPY package*.json ./
+RUN npm install
 
 FROM base as dev
-ENV NODE_ENV=development \
-    PORT=4000
-RUN npm install
-EXPOSE 4000
 CMD npm run watch
 
 FROM base as build
-RUN npm ci
 COPY . .
 RUN npm run build
 
@@ -19,7 +18,5 @@ FROM node:12-alpine as prod
 ENV NODE_ENV=production
 COPY --from=build /usr/src/app/package*.json ./
 RUN npm install --production
-COPY --from=build /usr/src/app/dist ./
-ENV PORT=8080
-EXPOSE 8080
+COPY --from=build /usr/src/app/dist ./dist
 CMD npm run start
