--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,57 +1,98 @@
 version: "3.7"
 
 services:
-  api:
-    build:
-      context: api
-      target: prod
-    image: docker.pkg.github.com/ckanich-classrooms/final-project-dream-team-1/api:master
+
+  mongo:
+    image: mongo
     restart: always
-    environment:
-      - MONGODB_URI=mongodb://mongo:27017/registrum
-      - REDIS_URL=redis://redis
-      - NODE_ENV=production
-      - BASE_PATH=/api
-    depends_on:
-      - mongo
-      - redis
+    ports:
+      - 27017:27017
     networks:
-      - kanich-net
+      - registrum-net
+    volumes:
+      - mongo-data:/data/db
+
   redis:
-    image: redis:alpine
+    image: redis
     restart: always
-    container_name: redis
+    ports:
+      - 6379:6379
+    networks:
+      - registrum-net
     volumes:
       - redis-data:/data
     command: --appendonly yes
-    networks: 
-      - kanich-net
-  mongo:
-    container_name: mongodb
-    restart: always
-    image: mongo:latest
-    volumes:
-      - mongo-data:/data/db
-    networks: 
-      - kanich-net
-  client:
-    container_name: client
-    build:
-      context: client
-      target: prod
-    image: docker.pkg.github.com/ckanich-classrooms/final-project-dream-team-1/client:master
+
+  mongo-express:
+    image: mongo-express
     restart: always
     environment:
-      - NODE_ENV=production
-    depends_on:
-      - api
+      - ME_CONFIG_MONGODB_SERVER=mongo
     ports:
-      - 8080:80
+      - 8081:8081
+    depends_on:
+      - mongo
+    networks:
+      - registrum-net
+
+  redis-commander:
+    image: rediscommander/redis-commander:latest
+    restart: always
+    environment:
+      - REDIS_HOSTS=local:redis:6379
+    ports:
+      - 8082:8081
+    depends_on:
+      - redis
+    networks:
+      - registrum-net
+
+  api:
+    build:
+      context: api
+      target: dev
+    image: docker.pkg.github.com/ckanich-classrooms/final-project-dream-team-1/api:dev
+    restart: always
+    working_dir: /usr/src/app
+    environment:
+      - MONGODB_URI=mongodb://mongo:27017/registrum
+      - REDIS_URL=redis://redis
+      - BASE_PATH=/api
+    ports:
+      - 4000:4000
+    volumes:
+      - ./api:/usr/src/app
+      - node_modules_api:/usr/src/app/node_modules
+    depends_on: 
+      - mongo
+      - redis
     networks: 
-      - kanich-net
+      - registrum-net
+
+  client:
+    build:
+      context: client
+      target: dev
+    image: docker.pkg.github.com/ckanich-classrooms/final-project-dream-team-1/client:dev
+    restart: always
+    working_dir: /usr/src/app
+    environment: 
+      - API_PROXY_URL=http://api:4000
+      - BASE_PATH=/api
+      - CLIENT_PORT=3000
+    ports:
+      - 3000:3000
+    volumes: 
+      - ./client:/usr/src/app
+      - node_modules_client:/usr/src/app/node_modules
+    networks: 
+      - registrum-net
 
 networks:
-  kanich-net:
-volumes:
+  registrum-net:
+  
+volumes: 
+  node_modules_api:
+  node_modules_client:
   mongo-data:
   redis-data:
