--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -3,9 +3,9 @@ name: Node CI
 on: [push, pull_request]
 
 jobs:
+
   build-api:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js 12.x
@@ -40,9 +40,41 @@ jobs:
           token: ${{ secrets.CODECOV_TOKEN }}
           file: ./api/coverage/clover.xml
           flags: api
+
+  build-banner:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js 12.x
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12.x
+      - name: Get npm cache directory
+        id: npm-cache
+        run: |
+          echo "::set-output name=dir::$(npm config get cache)"
+      - uses: actions/cache@v1
+        with:
+          path: ${{ steps.npm-cache.outputs.dir }}
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+      - name: Start Docker for Mongodb
+        run: docker run -d -p 27017:27017 mongo
+      - name: Start Docker for redis
+        run: docker run -d  -p 6379:6379 redis
+      - name: npm install, build, and test
+        run: |
+          pushd banner
+          npm ci
+          npm run build --if-present
+          npm run test --if-present
+          popd
+        env:
+          CI: true
+
   build-client:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js 12.x
