--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,7 +55,7 @@ services:
     restart: always
     working_dir: /usr/src/app
     environment:
-      - MONGODB_URI=mongodb://mongo:27017/registrum
+      - MONGODB_URI=mongodb://mongo:27017/registrum-api
       - REDIS_URL=redis://redis
       - BASE_PATH=/api
     ports:
@@ -63,6 +63,28 @@ services:
     volumes:
       - ./api:/usr/src/app
       - node_modules_api:/usr/src/app/node_modules
+    depends_on: 
+      - mongo
+      - redis
+    networks: 
+      - registrum-net
+
+  banner:
+    build:
+      context: banner
+      target: dev
+    image: docker.pkg.github.com/ckanich-classrooms/final-project-dream-team-1/banner:dev
+    restart: always
+    working_dir: /usr/src/app
+    environment:
+      - MONGODB_URI=mongodb://mongo:27017/registrum-banner
+      - REDIS_URL=redis://redis
+      - BASE_PATH=/banner
+    ports:
+      - 4000:4000
+    volumes:
+      - ./banner:/usr/src/app
+      - node_modules_banner:/usr/src/app/node_modules
     depends_on: 
       - mongo
       - redis
@@ -93,6 +115,7 @@ networks:
   
 volumes: 
   node_modules_api:
+  node_modules_banner:
   node_modules_client:
   mongo-data:
   redis-data:
