--- a/banner/package.json
+++ b/banner/package.json
@@ -9,7 +9,7 @@
         "serve": "node dist/index.js",
         "watch-node": "nodemon dist/index.js",
         "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\"",
-        "test": "jest --forceExit --coverage --verbose",
+        "test": "nyc --reporter=lcov --reporter=text mocha -r ts-node/register src/tests/**/*.spec.ts",
         "build-ts": "tsc",
         "watch-ts": "tsc -w",
         "watch-test": "npm run test -- --watchAll",
@@ -24,32 +24,44 @@
     "devDependencies": {
         "@types/apicache": "^1.2.2",
         "@types/axios": "^0.14.0",
+        "@types/chai": "^4.2.11",
         "@types/compression": "^1.7.0",
         "@types/cors": "^2.8.6",
         "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.3",
-        "@types/jest": "^25.1.4",
+        "@types/ioredis": "^4.14.9",
+        "@types/mocha": "^7.0.2",
         "@types/morgan": "^1.9.0",
-        "@types/node": "^13.9.1",
+        "@types/node": "^13.9.5",
+        "@types/request": "^2.48.4",
+        "@types/request-promise-native": "^1.0.17",
         "@types/tough-cookie": "^2.3.6",
-        "@typescript-eslint/eslint-plugin": "^2.23.0",
-        "@typescript-eslint/parser": "^2.23.0",
+        "@typescript-eslint/eslint-plugin": "^2.26.0",
+        "@typescript-eslint/parser": "^2.26.0",
         "eslint": "^6.8.0",
-        "jest": "^25.1.0",
-        "prettier": "^1.19.1",
-        "ts-jest": "^25.2.1",
-        "ts-node": "^8.6.2",
+        "mocha": "^7.1.1",
+        "nyc": "^15.0.0",
+        "prettier": "^2.0.2",
+        "ts-node": "^8.8.1",
         "typescript": "^3.8.3"
     },
     "dependencies": {
         "apicache": "^1.5.3",
         "axios": "^0.19.2",
         "axios-cookiejar-support": "^0.5.1",
+        "chai": "^4.2.0",
         "compression": "^1.7.4",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
-        "morgan": "^1.9.1",
-        "tough-cookie": "^3.0.1"
+        "ioredis": "^4.16.1",
+        "morgan": "^1.10.0",
+        "request": "^2.88.2",
+        "request-promise-native": "^1.0.8",
+        "tough-cookie": "^4.0.0"
+    },
+    "nyc": {
+        "include": "src",
+        "exclude": "**/*.spec.ts"
     }
 }
