--- a/banner/tsconfig.json
+++ b/banner/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "esModuleInterop": true,
     "target": "es6",
+    "lib": ["es2019"],
     "noImplicitAny": true,
     "moduleResolution": "node",
     "sourceMap": true,
