:bug: Spelling Error

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-    "cSpell.words": ["chomiak", "clarkclark", "cookiejar", "middha", "schen", "signup", "signin"]
+    "cSpell.words": [
+        "chomiak",
+        "clarkclark",
+        "cookiejar",
+        "crn",
+        "middha",
+        "schen",
+        "signin",
+        "signup"
+    ]
 }
