:fire: Remove personal names from tests

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "cookiejar",
         "crn",
         "middha",
+        "registrum",
         "schen",
         "signin",
         "signup"
