--- a/banner/tsconfig.json
+++ b/banner/tsconfig.json
@@ -1,21 +1,17 @@
 {
   "compilerOptions": {
     "module": "commonjs",
+    "allowSyntheticDefaultImports": true,
     "target": "es6",
-    "lib": ["es2019"],
     "noImplicitAny": true,
     "moduleResolution": "node",
     "sourceMap": true,
+    "lib": ["es2019"],
     "outDir": "dist",
     "baseUrl": ".",
     "paths": {
-      "*": [
-        "node_modules/*",
-        "src/types/*"
-      ]
+        "*": ["node_modules/*", "src/types/*"]
     }
   },
-  "include": [
-    "src/**/*"
-  ]
+  "include": ["src/**/*"]
 }
