--- a/client/package.json
+++ b/client/package.json
@@ -30,7 +30,7 @@
         "bootstrap": "^4.4.1",
         "core-js": "^3.6.4",
         "date-fns": "^2.11.0",
-        "next": "^9.3.1",
+        "next": "^9.3.4",
         "react": "^16.13.1",
         "react-app-polyfill": "^1.0.6",
         "react-bootstrap": "^1.0.0-beta.17",
@@ -55,17 +55,29 @@
         "@testing-library/react": "^10.0.1",
         "@types/enzyme": "^3.10.5",
         "@types/enzyme-adapter-react-16": "^1.0.6",
+        "@types/eslint": "^6.1.9",
         "@types/jest": "^25.1.4",
         "@types/node-sass": "^4.11.0",
         "@types/react": "^16.9.23",
+        "@typescript-eslint/eslint-plugin": "^2.26.0",
+        "@typescript-eslint/parser": "^2.26.0",
         "copy-webpack-plugin": "^5.1.1",
         "css-loader": "^3.4.2",
         "enzyme": "^3.11.0",
         "enzyme-adapter-react-16": "^1.15.2",
+        "eslint": "^6.8.0",
+        "eslint-config-airbnb": "^18.1.0",
+        "eslint-config-react": "^1.1.7",
+        "eslint-plugin-import": "^2.20.2",
+        "eslint-plugin-jsx-a11y": "^6.2.3",
+        "eslint-plugin-react": "^7.19.0",
+        "eslint-plugin-react-hooks": "^3.0.0",
         "file-loader": "^6.0.0",
+        "husky": "^4.2.3",
         "identity-obj-proxy": "^3.0.0",
         "image-webpack-loader": "^6.0.0",
         "jest": "^25.1.0",
+        "lint-staged": "^10.1.1",
         "node-sass": "^4.13.1",
         "sass-loader": "^8.0.2",
         "style-loader": "^1.1.3",
@@ -99,5 +111,13 @@
         "testMatch": [
             "<rootDir>/src/test/*.test.(ts|tsx|js)"
         ]
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged"
+        }
+    },
+    "lint-staged": {
+        "*.js,*.ts,*.tsx": "eslint --cache --fix"
     }
 }
