--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,9 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "build": "webpack --config ./config/webpack.production.config.js",
-        "build-lib": "webpack --config ./config/webpack.library.config.js",
-        "lint": "eslint \"src/**/*.{js,ts}\" --quiet",
+        "build": "webpack --config ./config/webpack.production.config.js && npm run lint",
+        "build-lib": "webpack --config ./config/webpack.library.config.js && npm run lint",
+        "lint": "eslint \"src/**/*.{js,ts,tsx}\" --quiet",
         "lint:fix": "npm run lint -- --fix",
         "refresh": "node ./scripts/refresh.js",
         "start": "webpack-dev-server src --inline --config ./config/webpack.development.config.js --open",
@@ -71,7 +71,6 @@
         "@testing-library/react": "^10.0.2",
         "@types/enzyme": "^3.10.5",
         "@types/enzyme-adapter-react-16": "^1.0.6",
-        "@types/eslint": "^6.1.9",
         "@types/jest": "^25.2.0",
         "@types/node": "^13.11.0",
         "@types/node-sass": "^4.11.0",
@@ -90,10 +89,8 @@
         "enzyme": "^3.11.0",
         "enzyme-adapter-react-16": "^1.15.2",
         "eslint": "^6.8.0",
-        "eslint-config-airbnb": "^18.1.0",
         "eslint-config-react": "^1.1.7",
         "eslint-plugin-import": "^2.20.2",
-        "eslint-plugin-jsx-a11y": "^6.2.3",
         "eslint-plugin-react": "^7.19.0",
         "eslint-plugin-react-hooks": "^3.0.0",
         "file-loader": "^6.0.0",
