--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -1,14 +1,43 @@
 {
     "parser": "@typescript-eslint/parser",
-    "extends": [
-        "airbnb",
-        "airbnb/hooks",
-        "plugin:@typescript-eslint/recommended"
-    ],
     "parserOptions": {
         "ecmaVersion": 2020,
-        "sourceType": "module"
+        "sourceType": "module",
+        "ecmaFeatures": {
+            "jsx": true
+        }
     },
+    "extends": [
+        "eslint:recommended",
+        "plugin:react/recommended",
+        "plugin:@typescript-eslint/recommended"
+    ],
+    "plugins": [
+        "react",
+        "@typescript-eslint"
+    ],
+    "env": {
+        "browser": true,
+        "jasmine": true,
+        "jest": true,
+        "node": true
+    },
+    "settings": {
+        "react": {
+            "pragma": "React",
+            "version": "detect"
+        }
+    },
+    "overrides": [
+        {
+            "files": [
+                "**/*.tsx"
+            ],
+            "rules": {
+                "react/prop-types": "off"
+            }
+        }
+    ],
     "rules": {
         "max-len": [
             "error",
