--- a/.gitignore
+++ b/.gitignore
@@ -154,7 +154,13 @@ build
 tmp/
 temp/
 
-### VisualStudioCode Patch ###
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
 # Ignore all local history of files
 .history
 
