--- a/api/.eslintrc
+++ b/api/.eslintrc
@@ -4,13 +4,31 @@
         "ecmaVersion": 2020,
         "sourceType": "module"
     },
-    "extends": ["plugin:@typescript-eslint/recommended"],
+    "extends": [
+        "plugin:@typescript-eslint/recommended"
+    ],
     "rules": {
-        "max-len": ["error", { "code": 100, "tabWidth": 4, "ignoreUrls": true }],
-        "quotes": ["error", "single"],
-        "semi": ["error", "never"],
+        "max-len": [
+            "error",
+            {
+                "code": 100,
+                "tabWidth": 4,
+                "ignoreUrls": true
+            }
+        ],
+        "quotes": [
+            "error",
+            "single"
+        ],
+        "semi": [
+            "error",
+            "never"
+        ],
         "no-tabs": "error",
-        "arrow-parens": ["warn", "as-needed"],
+        "arrow-parens": [
+            "warn",
+            "as-needed"
+        ],
         "no-trailing-spaces": "warn",
         "@typescript-eslint/explicit-function-return-type": "off",
         "@typescript-eslint/no-explicit-any": 1,
