--- a/banner/.eslintrc
+++ b/banner/.eslintrc
@@ -1,12 +1,36 @@
 {
     "parser": "@typescript-eslint/parser",
-    "extends": ["plugin:@typescript-eslint/recommended"],
     "parserOptions": {
-        "ecmaVersion": 2018,
+        "ecmaVersion": 2020,
         "sourceType": "module"
     },
+    "extends": [
+        "plugin:@typescript-eslint/recommended"
+    ],
     "rules": {
-        "quotes": ["error", "double"],
+        "max-len": [
+            "error",
+            {
+                "code": 100,
+                "tabWidth": 4,
+                "ignoreUrls": true,
+                "ignoreTemplateLiterals": true
+            }
+        ],
+        "quotes": [
+            "error",
+            "single"
+        ],
+        "semi": [
+            "error",
+            "never"
+        ],
+        "no-tabs": "error",
+        "arrow-parens": [
+            "warn",
+            "as-needed"
+        ],
+        "no-trailing-spaces": "warn",
         "@typescript-eslint/explicit-function-return-type": "off",
         "@typescript-eslint/no-explicit-any": 1,
         "@typescript-eslint/no-inferrable-types": [
