--- a/banner/package.json
+++ b/banner/package.json
@@ -13,7 +13,8 @@
         "build-ts": "tsc",
         "watch-ts": "tsc -w",
         "watch-test": "npm run test -- --watchAll",
-        "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
+        "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet",
+        "lint:fix": "npm run lint -- --fix",
         "debug": "npm run build && npm run watch-debug",
         "serve-debug": "nodemon --inspect dist/index.js",
         "watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\""
@@ -31,6 +32,7 @@
         "@types/express": "^4.17.3",
         "@types/ioredis": "^4.14.9",
         "@types/mocha": "^7.0.2",
+        "@types/mongodb": "^3.5.4",
         "@types/morgan": "^1.9.0",
         "@types/node": "^13.11.0",
         "@types/request": "^2.48.4",
@@ -41,7 +43,6 @@
         "eslint": "^6.8.0",
         "mocha": "^7.1.1",
         "nyc": "^15.0.0",
-        "prettier": "^2.0.2",
         "ts-node": "^8.8.1",
         "typescript": "^3.8.3"
     },
@@ -55,6 +56,7 @@
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "ioredis": "^4.16.1",
+        "mongodb": "^3.5.5",
         "morgan": "^1.10.0",
         "request": "^2.88.2",
         "request-promise-native": "^1.0.8",
