added banner-data project

--- a/banner/.env.example
+++ b/banner/.env.example
@@ -1,4 +1,5 @@
-PORT=8088
+PORT=4001
 BASE_PATH=/banner
 CACHE_TIME=10 minutes
 REDIS_URI=redis://localhost
+MONGODB_URI=mongodb://localhost:27017/banner
