--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -78,6 +78,41 @@ jobs:
           file: ./banner/coverage/lcov.info
           flags: banner
 
+  build-banner-data:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js 12.x
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12.x
+      - name: Get npm cache directory
+        id: npm-cache
+        run: |
+          echo "::set-output name=dir::$(npm config get cache)"
+      - uses: actions/cache@v1
+        with:
+          path: ${{ steps.npm-cache.outputs.dir }}
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+      - name: Start Docker for Mongodb
+        run: docker run -d -p 27017:27017 mongo
+      - name: npm install, build, and test
+        run: |
+          pushd banner-data
+          npm ci
+          npm run build --if-present
+          npm run test --if-present
+          popd
+        env:
+          CI: true
+      - uses: codecov/codecov-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          file: ./banner-data/coverage/lcov.info
+          flags: banner-data
+
   build-client:
     runs-on: ubuntu-latest
     steps:
@@ -110,4 +145,4 @@ jobs:
           token: ${{ secrets.CODECOV_TOKEN }}
           file: ./client/coverage/clover.xml
           flags: client
-        
+
