--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "typescript",
         "typescriptreact"
     ],
+    "files.trimTrailingWhitespace": true,
     "search.exclude": {
         "**/node_modules": true,
         "**/bower_components": true,
@@ -18,7 +19,8 @@
     "eslint.workingDirectories": [
         "api",
         "client",
-        "banner"
+        "banner",
+        "banner-data"
     ],
     "editor.codeActionsOnSave": {
         "source.fixAll.eslint": true
