--- a/codecov.yml
+++ b/codecov.yml
@@ -11,6 +11,9 @@ coverage:
       banner:
         flags: 
           - banner
+      banner-data:
+        flags: 
+          - banner-data
 
 flags:
   api:
@@ -22,3 +25,6 @@ flags:
   banner:
     paths:
       - banner/
+  banner-data:
+    paths:
+      - banner-data/
