--- a/.prettierrc
+++ b/.prettierrc
@@ -5,8 +5,7 @@
     "trailingComma": "none",
     "bracketSpacing": true,
     "jsxBracketSameLine": false,
-    "semi": true,
+    "semi": false,
     "useTabs": false,
     "arrowParens": "avoid",
-    "jsxIgnoreLineBreak": true
 }
